--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>BostonDogTOR</head>
     <body>
-        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/JadeVand/bdtetarelease/master/manifest.plist">
+        <a href="itms-services://?action=download-manifest&url=https://jadevand.github.io/manifest.plist">
             Demo Distribution
         </a>
     </body>
