back button working

--- a/create.html
+++ b/create.html
@@ -174,7 +174,7 @@
         </div>
         <input type="text" placeholder="Country" id="country"/>
         <button class="button-cta" id="submitform">Submit</button>
-        <button class="button-cta" id="backbutton">Back</button>
+        <button class="button-cta" id="backbutton" onclick="window.location.href='index.html'">Back</button>
       </div>
       <div class="map" id="map"></div>
     </div>
